include/zynum/blas/blas.h

typedef int32_t zynum_blas_int;
typedef struct {
    float real;
    float imag;
} zynum_blas_complex_float;
typedef struct {
    double real;
    double imag;
} zynum_blas_complex_double;
void csrot_(const zynum_blas_int *n, zynum_blas_complex_float *x, const zynum_blas_int *incx, zynum_blas_complex_float *y, const zynum_blas_int *incy, const float *c, const float *s);
void zdrot_(const zynum_blas_int *n, zynum_blas_complex_double *x, const zynum_blas_int *incx, zynum_blas_complex_double *y, const zynum_blas_int *incy, const double *c, const double *s);
void srotm_(const zynum_blas_int *n, float *x, const zynum_blas_int *incx, float *y, const zynum_blas_int *incy, const float *param);
void drotm_(const zynum_blas_int *n, double *x, const zynum_blas_int *incx, double *y, const zynum_blas_int *incy, const double *param);
void srotmg_(float *d1, float *d2, float *x1, const float *y1, float *param);
void drotmg_(double *d1, double *d2, double *x1, const double *y1, double *param);
void sscal_(const zynum_blas_int *n, const float *alpha, float *x, const zynum_blas_int *incx);
void dscal_(const zynum_blas_int *n, const double *alpha, double *x, const zynum_blas_int *incx);
void cscal_(const zynum_blas_int *n, const zynum_blas_complex_float *alpha, zynum_blas_complex_float *x, const zynum_blas_int *incx);
void zscal_(const zynum_blas_int *n, const zynum_blas_complex_double *alpha, zynum_blas_complex_double *x, const zynum_blas_int *incx);
void csscal_(const zynum_blas_int *n, const float *alpha, zynum_blas_complex_float *x, const zynum_blas_int *incx);
void zdscal_(const zynum_blas_int *n, const double *alpha, zynum_blas_complex_double *x, const zynum_blas_int *incx);
void sgemv_(const char *t, const zynum_blas_int *m, const zynum_blas_int *n, const float *alpha, const float *a, const zynum_blas_int *lda, const float *x, const zynum_blas_int *incx, const float *beta, float *y, const zynum_blas_int *incy);
void dgemv_(const char *t, const zynum_blas_int *m, const zynum_blas_int *n, const double *alpha, const double *a, const zynum_blas_int *lda, const double *x, const zynum_blas_int *incx, const double *beta, double *y, const zynum_blas_int *incy);
void cgemv_(const char *t, const zynum_blas_int *m, const zynum_blas_int *n, const zynum_blas_complex_float *alpha, const zynum_blas_complex_float *a, const zynum_blas_int *lda, const zynum_blas_complex_float *x, const zynum_blas_int *incx, const zynum_blas_complex_float *beta, zynum_blas_complex_float *y, const zynum_blas_int *incy);
void zgemv_(const char *t, const zynum_blas_int *m, const zynum_blas_int *n, const zynum_blas_complex_double *alpha, const zynum_blas_complex_double *a, const zynum_blas_int *lda, const zynum_blas_complex_double *x, const zynum_blas_int *incx, const zynum_blas_complex_double *beta, zynum_blas_complex_double *y, const zynum_blas_int *incy);
void sgbmv_(const char *t, const zynum_blas_int *m, const zynum_blas_int *n, const zynum_blas_int *kl, const zynum_blas_int *ku, const float *alpha, const float *a, const zynum_blas_int *lda, const float *x, const zynum_blas_int *incx, const float *beta, float *y, const zynum_blas_int *incy);
void dgbmv_(const char *t, const zynum_blas_int *m, const zynum_blas_int *n, const zynum_blas_int *kl, const zynum_blas_int *ku, const double *alpha, const double *a, const zynum_blas_int *lda, const double *x, const zynum_blas_int *incx, const double *beta, double *y, const zynum_blas_int *incy);
void cgbmv_(const char *t, const zynum_blas_int *m, const zynum_blas_int *n, const zynum_blas_int *kl, const zynum_blas_int *ku, const zynum_blas_complex_float *alpha, const zynum_blas_complex_float *a, const zynum_blas_int *lda, const zynum_blas_complex_float *x, const zynum_blas_int *incx, const zynum_blas_complex_float *beta, zynum_blas_complex_float *y, const zynum_blas_int *incy);
void zgbmv_(const char *t, const zynum_blas_int *m, const zynum_blas_int *n, const zynum_blas_int *kl, const zynum_blas_int *ku, const zynum_blas_complex_double *alpha, const zynum_blas_complex_double *a, const zynum_blas_int *lda, const zynum_blas_complex_double *x, const zynum_blas_int *incx, const zynum_blas_complex_double *beta, zynum_blas_complex_double *y, const zynum_blas_int *incy);