include/zynum/blas/blas.f90


    subroutine csrot( &
        n, x, incx, y, incy, c, &
        s &
    ) bind(C, name="csrot_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: n
      complex(blas_complex_float), intent(inout) :: x(*)
      integer(blasint), intent(in) :: incx
      complex(blas_complex_float), intent(inout) :: y(*)
      integer(blasint), intent(in) :: incy
      real(c_float), intent(in) :: c
      real(c_float), intent(in) :: s
    end subroutine csrot

    subroutine zdrot( &
        n, x, incx, y, incy, c, &
        s &
    ) bind(C, name="zdrot_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: n
      complex(blas_complex_double), intent(inout) :: x(*)
      integer(blasint), intent(in) :: incx
      complex(blas_complex_double), intent(inout) :: y(*)
      integer(blasint), intent(in) :: incy
      real(c_double), intent(in) :: c
      real(c_double), intent(in) :: s
    end subroutine zdrot

    subroutine srotm( &
        n, x, incx, y, incy, param &
    ) bind(C, name="srotm_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: n
      real(c_float), intent(inout) :: x(*)
      integer(blasint), intent(in) :: incx
      real(c_float), intent(inout) :: y(*)
      integer(blasint), intent(in) :: incy
      real(c_float), intent(in) :: param(*)
    end subroutine srotm

    subroutine drotm( &
        n, x, incx, y, incy, param &
    ) bind(C, name="drotm_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: n
      real(c_double), intent(inout) :: x(*)
      integer(blasint), intent(in) :: incx
      real(c_double), intent(inout) :: y(*)
      integer(blasint), intent(in) :: incy
      real(c_double), intent(in) :: param(*)
    end subroutine drotm

    subroutine srotmg( &
        d1, d2, x1, y1, param &
    ) bind(C, name="srotmg_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      real(c_float), intent(inout) :: d1
      real(c_float), intent(inout) :: d2
      real(c_float), intent(inout) :: x1
      real(c_float), intent(in) :: y1
      real(c_float), intent(inout) :: param(*)
    end subroutine srotmg

    subroutine drotmg( &
        d1, d2, x1, y1, param &
    ) bind(C, name="drotmg_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      real(c_double), intent(inout) :: d1
      real(c_double), intent(inout) :: d2
      real(c_double), intent(inout) :: x1
      real(c_double), intent(in) :: y1
      real(c_double), intent(inout) :: param(*)
    end subroutine drotmg

    subroutine sscal( &
        n, alpha, x, incx &
    ) bind(C, name="sscal_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: n
      real(c_float), intent(in) :: alpha
      real(c_float), intent(inout) :: x(*)
      integer(blasint), intent(in) :: incx
    end subroutine sscal

    subroutine dscal( &
        n, alpha, x, incx &
    ) bind(C, name="dscal_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: n
      real(c_double), intent(in) :: alpha
      real(c_double), intent(inout) :: x(*)
      integer(blasint), intent(in) :: incx
    end subroutine dscal

    subroutine cscal( &
        n, alpha, x, incx &
    ) bind(C, name="cscal_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: n
      complex(blas_complex_float), intent(in) :: alpha
      complex(blas_complex_float), intent(inout) :: x(*)
      integer(blasint), intent(in) :: incx
    end subroutine cscal

    subroutine zscal( &
        n, alpha, x, incx &
    ) bind(C, name="zscal_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: n
      complex(blas_complex_double), intent(in) :: alpha
      complex(blas_complex_double), intent(inout) :: x(*)
      integer(blasint), intent(in) :: incx
    end subroutine zscal

    subroutine csscal( &
        n, alpha, x, incx &
    ) bind(C, name="csscal_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: n
      real(c_float), intent(in) :: alpha
      complex(blas_complex_float), intent(inout) :: x(*)
      integer(blasint), intent(in) :: incx
    end subroutine csscal

    subroutine zdscal( &
        n, alpha, x, incx &
    ) bind(C, name="zdscal_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: n
      real(c_double), intent(in) :: alpha
      complex(blas_complex_double), intent(inout) :: x(*)
      integer(blasint), intent(in) :: incx
    end subroutine zdscal

    subroutine sgemv( &
        t, m, n, alpha, a, lda, &
        x, incx, beta, y, incy &
    ) bind(C, name="sgemv_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: t
      integer(blasint), intent(in) :: m
      integer(blasint), intent(in) :: n
      real(c_float), intent(in) :: alpha
      real(c_float), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      real(c_float), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      real(c_float), intent(in) :: beta
      real(c_float), intent(inout) :: y(*)
      integer(blasint), intent(in) :: incy
    end subroutine sgemv

    subroutine dgemv( &
        t, m, n, alpha, a, lda, &
        x, incx, beta, y, incy &
    ) bind(C, name="dgemv_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: t
      integer(blasint), intent(in) :: m
      integer(blasint), intent(in) :: n
      real(c_double), intent(in) :: alpha
      real(c_double), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      real(c_double), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      real(c_double), intent(in) :: beta
      real(c_double), intent(inout) :: y(*)
      integer(blasint), intent(in) :: incy
    end subroutine dgemv

    subroutine cgemv( &
        t, m, n, alpha, a, lda, &
        x, incx, beta, y, incy &
    ) bind(C, name="cgemv_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: t
      integer(blasint), intent(in) :: m
      integer(blasint), intent(in) :: n
      complex(blas_complex_float), intent(in) :: alpha
      complex(blas_complex_float), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      complex(blas_complex_float), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      complex(blas_complex_float), intent(in) :: beta
      complex(blas_complex_float), intent(inout) :: y(*)
      integer(blasint), intent(in) :: incy
    end subroutine cgemv

    subroutine zgemv( &
        t, m, n, alpha, a, lda, &
        x, incx, beta, y, incy &
    ) bind(C, name="zgemv_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: t
      integer(blasint), intent(in) :: m
      integer(blasint), intent(in) :: n
      complex(blas_complex_double), intent(in) :: alpha
      complex(blas_complex_double), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      complex(blas_complex_double), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      complex(blas_complex_double), intent(in) :: beta
      complex(blas_complex_double), intent(inout) :: y(*)
      integer(blasint), intent(in) :: incy
    end subroutine zgemv

    subroutine sgbmv( &
        t, m, n, kl, ku, alpha, &
        a, lda, x, incx, beta, y, &
        incy &
    ) bind(C, name="sgbmv_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: t
      integer(blasint), intent(in) :: m
      integer(blasint), intent(in) :: n
      integer(blasint), intent(in) :: kl
      integer(blasint), intent(in) :: ku
      real(c_float), intent(in) :: alpha
      real(c_float), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      real(c_float), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      real(c_float), intent(in) :: beta
      real(c_float), intent(inout) :: y(*)
      integer(blasint), intent(in) :: incy
    end subroutine sgbmv

    subroutine dgbmv( &
        t, m, n, kl, ku, alpha, &
        a, lda, x, incx, beta, y, &
        incy &
    ) bind(C, name="dgbmv_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: t
      integer(blasint), intent(in) :: m
      integer(blasint), intent(in) :: n
      integer(blasint), intent(in) :: kl
      integer(blasint), intent(in) :: ku
      real(c_double), intent(in) :: alpha
      real(c_double), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      real(c_double), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      real(c_double), intent(in) :: beta
      real(c_double), intent(inout) :: y(*)
      integer(blasint), intent(in) :: incy
    end subroutine dgbmv

    subroutine cgbmv( &
        t, m, n, kl, ku, alpha, &
        a, lda, x, incx, beta, y, &
        incy &
    ) bind(C, name="cgbmv_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: t
      integer(blasint), intent(in) :: m
      integer(blasint), intent(in) :: n
      integer(blasint), intent(in) :: kl
      integer(blasint), intent(in) :: ku
      complex(blas_complex_float), intent(in) :: alpha
      complex(blas_complex_float), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      complex(blas_complex_float), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      complex(blas_complex_float), intent(in) :: beta
      complex(blas_complex_float), intent(inout) :: y(*)
      integer(blasint), intent(in) :: incy
    end subroutine cgbmv

    subroutine zgbmv( &
        t, m, n, kl, ku, alpha, &
        a, lda, x, incx, beta, y, &
        incy &
    ) bind(C, name="zgbmv_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: t
      integer(blasint), intent(in) :: m
      integer(blasint), intent(in) :: n
      integer(blasint), intent(in) :: kl
      integer(blasint), intent(in) :: ku
      complex(blas_complex_double), intent(in) :: alpha
      complex(blas_complex_double), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      complex(blas_complex_double), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      complex(blas_complex_double), intent(in) :: beta
      complex(blas_complex_double), intent(inout) :: y(*)
      integer(blasint), intent(in) :: incy
    end subroutine zgbmv
